# Money_Tracker

./: .gitignore  BALANCE_SYSTEM.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  DATABASE_INFO.md  GETTING_STARTED.md  README.md  RELEASE_NOTES.md  RESTART_INSTRUCTIONS.md  STATUS.md  USER_GUIDE.md  package-lock.json  package.json  tailwind.config.js
database/: schema.sql
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: accounts.rs  budget.rs  budgets.rs  categories.rs  clients.rs  company_settings.rs  dashboard.rs  estimator.rs  goals.rs  income_breakdown.rs  investments.rs  invoices.rs  mod.rs  projects.rs  quotations.rs  reports.rs  tags.rs  transactions.rs  utils.rs
src-tauri/src/db/: mod.rs
src/components/investments/: BenchmarkTab.tsx
src/components/layout/: Layout.tsx
src/components/transactions/: TimelineView.tsx
src/hooks/: useDatabase.ts
src/screens/: Accounts.tsx  Budget.tsx  Categories.tsx  Clients.tsx  Dashboard.tsx  DecisionMaker.tsx  Estimator.tsx  IncomeBreakdown.tsx  Investments.tsx  Invoices.tsx  Projects.tsx  Quotations.tsx  Reports.tsx  Settings.tsx  Transactions.tsx
src/types/: index.ts  transactions.ts
src/utils/: formatters.ts  investmentCalculations.ts  pdfGenerator.ts  pdfGeneratorNew.ts  theme.ts
